# ws2812b

firmware/: Cargo.toml
firmware/.cargo/: config
firmware/src/: main.rs
sequence/: Cargo.toml
