[package]
authors = ["Jorge Aparicio <jorge@japaric.io>"]
description = "WS2812B demo application"
license = "MIT OR Apache-2.0"
name = "firmware"
repository = "https://github.com/japaric/ws2812"
version = "0.1.0"

[dependencies]
aligned = "0.1.1"
cortex-m = "0.4.3"
cortex-m-rt = "0.4"
cortex-m-rtfm = "0.3.1"
panic-abort = "0.1.1"
stm32f103xx = "0.8"
stm32f103xx-hal = { git = "https://github.com/japaric/stm32f103xx-hal"} 

[dependencies.shared]
optional = false
path = "../shared"

[profile.release]
debug = true
lto = true
