[package]
authors = ["Jorge Aparicio <jorge@japaric.io>"]
description = "WS2812B demo application"
license = "MIT OR Apache-2.0"
name = "firmware"
repository = "https://github.com/japaric/ws2812"
version = "0.1.0"

[dependencies]
cortex-m = "0.4.3"
cortex-m-rt = "0.4.0"
cortex-m-rtfm = "0.3.2"
panic-abort = "0.1.1"
stm32f103xx = "0.9.0"
stm32f103xx-hal = { git = "https://github.com/japaric/stm32f103xx-hal"} 

[dependencies.shared]
optional = false
path = "../shared"

[dependencies.either]
version = "1.5.0"
default-features = false

[profile.release]
debug = true
lto = true
