[package]
edition = "2018"
authors = ["Jorge Aparicio <jorge@japaric.io>"]
description = "WS2812B demo application"
license = "MIT OR Apache-2.0"
name = "firmware"
repository = "https://github.com/japaric/ws2812"
version = "0.1.0"

[dependencies]
cortex-m = "0.5.8"
cortex-m-rt = "0.6.7"
cortex-m-rtfm = "0.4.1"
panic-abort = "0.3.1"
aligned = "0.3.1"

[dependencies.stm32f1xx-hal]
version = "0.2.0"
features = ["rt", "stm32f103"]

[dependencies.shared]
optional = false
path = "../shared"

[profile.release]
debug = true
lto = true
